# sparql2rify

./: Cargo.toml  README.md
oxigraph/: README.md
oxigraph/lib/src/: lib.rs
oxigraph/lib/src/model/: literal.rs  mod.rs  named_node.rs
oxigraph/lib/src/sparql/: algebra.rs  mod.rs  model.rs
src/: convert.rs  main.rs  types.rs  util.rs
