[package]
name = "sparql2rify"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rify = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
displaydoc = "0.1"

[dependencies.oxigraph]
version = "0.1.1"
path = "./oxigraph/lib"
